<resources>
    <string name="app_name">Калькулятор</string>
    <string name="author_name">KingArtur1000</string>
    <string name="footer_splash">by KingArtur1000</string>
    <string name="btn_ac">AC</string>
    <string name="btn_percent">%</string>
    <string name="btn_divide">÷</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_multiply">×</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_minus">-</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_plus">+</string>
    <string name="btn_0">0</string>
    <string name="btn_dot">,</string>
    <string name="btn_equals">=</string>

    <!-- Описания для кнопок-картинок (contentDescription) -->
    <string name="desc_delete">Стереть символ</string>
    <string name="desc_switch">Расширенный калькулятор</string>

    <string name="btn_2nd">2nd</string>
    <string name="btn_deg">deg</string>
    <string name="btn_sin">sin</string>
    <string name="btn_asin">asin</string>
    <string name="btn_cos">cos</string>
    <string name="btn_acos">acos</string>
    <string name="btn_tan">tan</string>
    <string name="btn_atan">atan</string>
    <string name="btn_pow">xʸ</string>
    <string name="btn_lg">lg</string>
    <string name="btn_ln">ln</string>
    <string name="btn_ex">eˣ</string>
    <string name="btn_10x">10ˣ</string>
    <string name="btn_x2">x²</string>
    <string name="btn_open_paren">(</string>
    <string name="btn_close_paren">)</string>
    <string name="btn_sqrt">√x</string>
    <string name="btn_c">C</string>
    <string name="btn_fact">x!</string>
    <string name="btn_inv">1/x</string>
    <string name="btn_pi">π</string>
    <string name="btn_e">e</string>
    <string name="desc_switch_back">Обычный калькулятор</string>
</resources>